fixed z-index issues

--- a/css/main.css
+++ b/css/main.css
@@ -245,6 +245,7 @@
 }
 
 .countdown-el{
+    z-index: -1;
     position: relative;
     float: right;
 }
